--- a/src/index.css
+++ b/src/index.css
@@ -23,19 +23,20 @@ a:hover {
   color: #535bf2;
 }
 
-#root {
-  display: flex;
-  height: 100%;
-  width: 100%;
-}
-
 body {
   margin: 0;
-  display: flex;
-  height: 100%;
+  height: 95vh;
+  width: 100%;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+#root {
+  flex: 1;
+  width: 90vw;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
